--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -1,1 +1,20 @@
 // app global css
+// Quasar Stylus Variables
+// --------------------------------------------------
+// To customize the look and feel of this app, you can override
+// the Stylus variables found in Quasar's source Stylus files.
+
+// Check documentation for full list of Quasar variables
+
+// It's highly recommended to change the default colors
+// to match your app's branding.
+// Tip: Use the "Theme Builder" on Quasar's documentation website.
+
+$primary   = #fff200
+$secondary = #fff200
+$accent    = #9C27B0
+
+$positive  = #fff200
+$negative  = #C10015
+$info      = #fff200
+$warning   = #fff200
