--- a/src/css/quasar.variables.styl
+++ b/src/css/quasar.variables.styl
@@ -9,8 +9,8 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   = #027BE3
-$secondary = #26A69A
+$primary   = #F2C037
+$secondary = #F2C037
 $accent    = #9C27B0
 
 $positive  = #21BA45
